--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ fcm-django==0.3.7
 firebase-admin==4.5.0
 Flask==1.1.2
 Flask-SocketIO==4.3.1
-flatbuffers==1.12
+flatbuffers
 future==0.18.2
 gast==0.3.3
 google-api-core==1.23.0
@@ -113,7 +113,7 @@ Pillow==8.0.1
 praw==7.2.0
 prawcore==2.0.0
 proto-plus==1.13.0
-protobuf==3.14.0
+protobuf
 psycopg2-binary
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -148,11 +148,11 @@ soupsieve==2.2
 SQLAlchemy==1.4.0
 sqlparse==0.4.1
 stripe==2.55.1
-tensorboard==2.9.0
-tensorboard-data-server==0.6.0
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0rc0
+tensorboard
+tensorboard-data-server
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
 termcolor==1.1.0
 toml==0.10.2
 tqdm==4.60.0
