add speak command to project

--- a/requirements.txt
+++ b/requirements.txt
@@ -183,3 +183,8 @@ pyathena==2.13.0
 djangorestframework-simplejwt==5.2.0
 PyGithub
 uvicorn[standard]
+openai-whisper
+ffmpeg
+transformers
+sentencepiece
+datasets
